--- a/backward_disentangling.tex
+++ b/backward_disentangling.tex
@@ -942,17 +942,17 @@ Assume now first that $m< k$. Note that
 $$
 \frac{\lambda\tilde{\mathcal{L}}^{\varphi,\theta}_{m, n} \addf[n]{k}}{\lambda\tilde{\mathcal{L}}^{\varphi,\theta}_{m, n} \1_{}}= \frac{\lambda(1\otimes F^\theta_{m|n}\ldots F^\theta_{k|n}\addf[n]{k}\uk{m, n-1}^\theta\1_{})}{\lambda (\1\otimes  \uk{m, n-1}^\theta\1_{})}\eqsp, 
 $$
-where the forward kernel $ F^\theta_{\ell|n}$ is given by
+where the forward kernel $ \mathsf{F}^\theta_{\ell|n}$ is given by
 $$
- F^\theta_{\ell|n}h(x_\ell) = \frac{\uk{\ell}^\theta(h\uk{\ell+1, n-1}^\theta\1_{})(x_\ell)}{ \uk{\ell, n-1}^\theta\1_{}(x_\ell)}\eqsp.
+ \mathsf{F}^\theta_{\ell|n}h(x_\ell) = \frac{\uk{\ell}^\theta(h\uk{\ell+1, n-1}^\theta\1_{})(x_\ell)}{ \uk{\ell, n-1}^\theta\1_{}(x_\ell)}\eqsp.
 $$
 By H\ref{assum:strong:mixing}, 
 $$
- F^\theta_{\ell|n}h(x_\ell) \geqslant \frac{\sigma_-}{\sigma_+}\mu_{\ell|n}h\eqsp,
+ \mathsf{F}^\theta_{\ell|n}h(x_\ell) \geqslant \frac{\sigma_-}{\sigma_+}\mu_{\ell|n}h\eqsp,
 $$
 with $\mu_{\ell|n}h = \mu(h\uk{\ell+1, n-1}^\theta\1_{})(x_\ell) / \mu\uk{\ell+1, n-1}^\theta\1_{}$. Therefore, the kernels $ F^\theta_{\ell|n}$ also satisfy a Doeblin condition. On the other hand,
 $$
-\frac{\lambda\tilde{\mathcal{L}}^{\varphi,\theta}_{m, n} \addf[n]{k}}{\lambda\tilde{\mathcal{L}}^{\varphi,\theta}_{m, n} \1_{}} - \frac{\lambda'\tilde{\mathcal{L}}^{\varphi,\theta}_{m, n} \addf[n]{k}}{\lambda'\tilde{\mathcal{L}}^{\varphi,\theta}_{m, n} \1_{}} = (\lambda_{m|n} - \lambda'_{m|n})F^\theta_{m|n}\ldots F^\theta_{k|n}\addf[n]{k},
+\frac{\lambda\tilde{\mathcal{L}}^{\varphi,\theta}_{m, n} \addf[n]{k}}{\lambda\tilde{\mathcal{L}}^{\varphi,\theta}_{m, n} \1_{}} - \frac{\lambda'\tilde{\mathcal{L}}^{\varphi,\theta}_{m, n} \addf[n]{k}}{\lambda'\tilde{\mathcal{L}}^{\varphi,\theta}_{m, n} \1_{}} = (\lambda_{m|n} - \lambda'_{m|n})\mathsf{F}^\theta_{m|n}\ldots \mathsf{F}^\theta_{k|n}\addf[n]{k},
 $$
 where for any probability measure $\eta$,
 $$
